[project]
name = "poetry-tui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "python-dotenv>=1.1.1",
    "python-escpos>=3.1",
    "requests>=2.32.4",
    "textual>=5.3.0",
]

[project.scripts]
poetry-tui = "poetry_tui:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
